--- a/src/App.css
+++ b/src/App.css
@@ -62,6 +62,10 @@
 }
 
 .color {
+  margin: 5px;
+  border-radius: 100px;
+  width: 50px;
+  height: 50px;
   cursor: pointer;
   transition: background 0.5s ease-in-out;
 }
@@ -72,10 +76,6 @@
   align-items: center;
 }
 
-.palette-wrapper {
-  margin: 5px;
-}
-
 .palettes-container {
   margin: 30px;
 }
@@ -83,6 +83,7 @@
 .palettes-container-title {
   font-weight: bold;
   color: grey;
+  margin-bottom: 5px;
 }
 
 @keyframes App-logo-spin {
