--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,8 @@
 
 .App {
   text-align: center;
-  /* padding-top: 20px; */
   font-family: "Montserrat", sans-serif;
+  padding-bottom: 50px;
 }
 
 .App-logo {
@@ -90,6 +90,21 @@
 .color-input-picker {
   height: 50px;
   transition: opacity 0.5s;
+}
+
+.button-bar {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  background: white;
+  height: 50px;
+  width: 200px;
+  left: 50%;
+  margin-left: -100px;
+  position: fixed;
+  bottom: 10px;
+  border-radius: 100px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
 @keyframes App-logo-spin {
