--- a/src/App.css
+++ b/src/App.css
@@ -105,3 +105,33 @@
 .material-icons.md-dark {
   color: rgba(0, 0, 0, 0.54);
 }
+
+.palette-bar {
+  animation-duration: 0.2s;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background: white;
+  height: 150px;
+  width: 300px;
+  left: 50%;
+  margin-left: -150px;
+  position: fixed;
+  bottom: 65px;
+  border-radius: 25px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+}
+
+.palette-bar-row {
+  display: flex;
+  flex-direction: row;
+}
+
+.palette-bar-divider {
+  background-color: #e0e0e0;
+  height: 2px;
+  width: 260px;
+  margin: 10px;
+  border-radius: 100px;
+}
