--- a/src/App.css
+++ b/src/App.css
@@ -90,12 +90,17 @@
   cursor: pointer;
   height: 25px;
   width: 25px;
-  padding: 8px;
+  padding: 5px;
   border-radius: 100px;
+  border: 3px transparent solid;
 }
 
-.icon-button-wrapper.is-active {
+.icon-button-wrapper.highlighted {
   background: #e0e0e0;
+}
+
+.icon-button-wrapper.highlighted-outline {
+  border: 3px #e0e0e0 solid;
 }
 
 .material-icons {
