--- a/src/App.css
+++ b/src/App.css
@@ -145,4 +145,14 @@
   width: 260px !important;
   box-shadow: none !important;
   font-family: "Montserrat", sans-serif !important;
+  font-weight: bold !important;
+}
+
+.chrome-picker input {
+  font-weight: bold !important;
+  border: none !important;
+  border-bottom: 2px solid #000000 !important;
+  border-radius: 0px !important;
+  outline: none !important;
+  box-shadow: none !important;
 }
