--- a/src/App.css
+++ b/src/App.css
@@ -43,11 +43,13 @@
 
 .color {
   margin: 5px;
+  border-width: 4px;
+  border-style: solid;
   border-radius: 100px;
   width: 50px;
   height: 50px;
   cursor: pointer;
-  transition: background 0.5s ease-in-out;
+  transition: background 0.5s ease-in-out, border-color 0.5s ease-in-out;
 }
 
 .palette {
