--- a/src/App.css
+++ b/src/App.css
@@ -52,6 +52,10 @@
   transition: background 0.5s ease-in-out, border-color 0.5s ease-in-out;
 }
 
+.palette-bar-row > .color {
+  transition: background 0.1s ease-in-out, border-color 0.1s ease-in-out;
+}
+
 .palette {
   display: flex;
   justify-content: center;
