--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,8 @@
   width: 50px;
   height: 50px;
   cursor: pointer;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+
   transition: background 0.5s ease-in-out, border-color 0.5s ease-in-out;
 }
 
