--- a/src/App.css
+++ b/src/App.css
@@ -164,3 +164,13 @@
   outline: none !important;
   box-shadow: none !important;
 }
+
+.palette-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.graphic {
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+}
