--- a/src/App.css
+++ b/src/App.css
@@ -169,8 +169,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-bottom: 10px;
 }
 
-.graphic {
+.with-shadow {
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+}
+
+.gradients-wrapper {
+  display: flex;
+  flex-direction: row;
 }
