--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat:400,700,900&display=swap");
 
+a {
+  color: rgba(0, 0, 0, 0.54);
+  font-weight: bold;
+  text-decoration: none;
+}
+
 .App {
   text-align: center;
   font-family: "Montserrat", sans-serif;
@@ -179,4 +185,9 @@
 .gradients-wrapper {
   display: flex;
   flex-direction: row;
+}
+
+.help-page {
+  word-wrap: break-word;
+  padding: 0px 14px;
 }
