--- a/src/app/PaletteBar.css
+++ b/src/app/PaletteBar.css
@@ -5,7 +5,7 @@
   align-items: center;
   justify-content: center;
   background: white;
-  height: 376px;
+  padding: 10px 0px;
   width: 300px;
   left: 50%;
   margin-left: -150px;
@@ -38,6 +38,10 @@
   justify-content: space-evenly;
 }
 
+.palette-bar-panel {
+  height: 245px;
+}
+
 .chrome-picker {
   width: 260px !important;
   box-shadow: none !important;
@@ -52,4 +56,8 @@
   border-radius: 0px !important;
   outline: none !important;
   box-shadow: none !important;
+}
+
+.palette-bar-swatch {
+  /*  */
 }
